@@ -1,3 +1,12 @@
+2007-02-20  Shawn Betts  <sabetts@shitbender.gagrod>
+
+	* nethack-compat.el (nh-overwrite-insert): rewrite
+
+	* nethack-api.el (nhapi-doprev-message): call nh-message
+	(nhapi-create-message-window): add newline
+	(nhapi-display-menu): make sure there's a nh-message-buffer
+	(nhapi-select-menu): likewise
+
 2006-08-26  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* nethack-compat.el (nh-read-key-sequence-vector): return the
